    would cause a calculation error.
  * Fixed the runtime to be able to deal with all tagged pointers from the
    Objective-C world. For instance, using NSTaggedManagedObjectID would lead
    to a runtime crash.
  * [OSX] Fixed the `rake crashlog' task.
  * Fixed a bug in the compiler that would ignore BridgeSupport enum values if
    they only have a 64-bit value.

= RubyMotion 2.19 =

  * [iOS] Fixed a regression related to the sim launcher changes for Xcode 5.1
    that broke `rake simulator debug=1`.
  * [OSX] Fixed a regression where #eval support was not working anymore.
  * Improved Hash#{default, shift} when Hash#default_proc returns a block.
    2 times faster.
  * Improved comparison iterator blocks that return Float objects.
    (Ex. Array#sort{|a,b| return float_object }). 2 times faster.

= RubyMotion 2.18 =

  * Added the `rake crashlog:device' task which will download crash reports
    generated by the app on the device, symbolicate them and save them on the
    local file system. The latest generated file will then be automatically
    opened in Console.app.
  * Improved the terminal output when using `vendor_project` with an Xcode
    project so that it matches the build system output. This feature is using
    the XCPretty project. Thanks a lot to Marin Usalj and Delisa Mason for it.
  * [iOS] Fixed a bug where applications could not be launched on the simulator
    when using Xcode 5.1. Due to this change, Xcode 4 is no longer supported.
  * [OSX] Fixed a bug where apps generated on i5/i7 machines would fail to run
    on older machines (ex. core2) due to the use of a new instruction.
  * Fixed a bug where Hash#{[]=, clear, removeObjectForKey} will immediately
    release an object.
  * Fixed a bug where Array#{delete, clear} will immediately release an object.
  * Fixed a bug where Struct#[]= and setter of Struct member will immediately
    release an object.
  * Fixed a bug where setter of Boxed member will immediately release an object.